# 2023-2024

./: README.md
BrazoSTL/: LowerArm.STL  LowerGripper.STL  baseFlipper.STL  baseTren.STL  gripperFixed.STL
Nuevo Protocolo/: comunicacion.cpp  mySerial.cpp  mySerial.h
Nuevo Protocolo/src/nuevo_protocolo/: CMakeLists.txt  package.xml
Nuevo Protocolo/src/nuevo_protocolo/src/: comunicacion.cpp  test
ProtocoloEthernet/: a.cpp  client  movimiento.cpp  movimientoEthernet.cpp  myserial.hpp  prueba  pruebaEthernet  server.cpp
ROBOT_VISION/: Detection.py  Label_creation.py  yolo_train_console_comand.txt
ixnaminki2_ws/src/hello_moveit2/: CMakeLists.txt  package.xml
ixnaminki2_ws/src/hello_moveit2/src/: hello_moveit2.cpp
ixnaminki2_ws/src/ixnaminki2_alexa/: package.xml  setup.cfg  setup.py
ixnaminki2_ws/src/ixnaminki2_alexa/ixnaminki2_alexa/: alexa_interface.py
ixnaminki2_ws/src/ixnaminki2_control/: CMakeLists.txt  package.xml
ixnaminki2_ws/src/ixnaminki2_control/config/: arm_controllers.yaml  ixnaminki_controllers.yaml
ixnaminki2_ws/src/ixnaminki2_control/launch/: arm_controllers.launch.py
ixnaminki2_ws/src/ixnaminki2_description/: CMakeLists.txt  package.xml
ixnaminki2_ws/src/ixnaminki2_description/launch/: arm_display.launch.py  arm_gazebo.launch.py  display.launch.py
ixnaminki2_ws/src/ixnaminki2_description/urdf/: arm_gazebo.xacro  brazo.urdf.xacro  control_brazo.xacro  ix_control.xacro
ixnaminki2_ws/src/ixnaminki2_moveit/: CMakeLists.txt
ixnaminki2_ws/src/ixnaminki2_moveit/config/: initial_positions.yaml  ixnaminki_arm.srdf  joint_limits.yaml  moveit_.rviz  moveit_controllers.yaml
ixnaminki2_ws/src/ixnaminki2_moveit/launch/: arm.launch.py  moveit.launch.py
ixnaminki2_ws/src/ixnaminki2_remote/: CMakeLists.txt  package.xml
ixnaminki2_ws/src/ixnaminki2_remote/launch/: plan.launch.py
ixnaminki2_ws/src/ixnaminki2_remote/src/: a  plan_client.cpp  prueba.cpp
ixnaminki_olinki/src/martin/: CMakeLists.txt  package.xml
ixnaminki_olinki/src/martin/src/: martino_client.cpp  martino_service.cpp
ixnaminki_olinki/src/structuras/: CMakeLists.txt  package.xml
ixnaminki_olinki/src/structuras/srv/: Movement.srv
ixnaminki_olinki_ws/src/formatos/srv/: Moverob.srv
ixnaminki_olinki_ws/src/ixnaminki2_description/launch/: arm_display.launch.py  gazebo.launch.py
ixnaminki_olinki_ws/src/ixnaminki2_description/rviz/: display.rviz
ixnaminki_olinki_ws/src/ixnaminki2_description/urdf/: brazo.urdf.xacro  gazebo.xacro  ixnaminki.urdf.xacro
ixnaminki_olinki_ws/src/ixnaminki2_moveit/: package.xml
ixnaminki_olinki_ws/src/ixnaminki2_moveit/config/: joint_limits.yaml  kinematics.yaml
ixnaminki_olinki_ws/src/ixnaminki2_moveit/launch/: arm.launch.py  moveit.launch.py
ixnaminki_olinki_ws/src/ixnaminki2_remote/: CMakeLists.txt  package.xml
ixnaminki_olinki_ws/src/ixnaminki2_remote/launch/: plan.launch.py
ixnaminki_olinki_ws/src/ixnaminki2_remote/src/: a.cpp  plan_server.cpp  prueba.cpp  task_client.cpp  task_server.cpp
ixnaminki_olinki_ws/src/movimiento/src/: movimiento.cpp
ixnaminki_olinki_ws/src/si/si/: MoveArmClient.py  interfaz2.py
ixnaminki_olinki_ws/src/xbox/src/: joystick_reader.cpp
ixnaminki_ws/src/ixnaminki_alexa/: CMakeLists.txt  package.xml
ixnaminki_ws/src/ixnaminki_alexa/ixnaminki_alexa/: alexa_interface.py
ixnaminki_ws/src/ixnaminki_controller/: CMakeLists.txt  package.xml
ixnaminki_ws/src/ixnaminki_controller/config/: ixnaminki_controllers.yaml
ixnaminki_ws/src/ixnaminki_controller/launch/: controller.launch.py
ixnaminki_ws/src/ixnaminki_description/: CMakeLists.txt  package.xml
ixnaminki_ws/src/ixnaminki_description/launch/: display.launch.py  gazebo.launch.py
ixnaminki_ws/src/ixnaminki_description/rviz/: display.rviz
ixnaminki_ws/src/ixnaminki_description/urdf/: camara.xacro  ixnaminki_des.urdf.xacro  ixnaminki_gazebo.xacro  ixnaminki_ros2_control.xacro  joints_basura.txt
ixnaminki_ws/src/ixnaminki_moveit/: CMakeLists.txt  package.xml
ovalo_ws/src/formato/: CMakeLists.txt  package.xml
ovalo_ws/src/movimiento_robot/: CMakeLists.txt  package.xml
ovalo_ws/src/movimiento_robot/src/: comunicacion.cpp  movimiento.cpp
ovalo_ws/src/xbox_control/: CMakeLists.txt  package.xml
rasPY_ws/src/movimiento/: CMakeLists.txt  package.xml
rasPY_ws/src/xbox/: CMakeLists.txt  package.xml
rasp_ws/src/formatosa/: CMakeLists.txt  package.xml
rasp_ws/src/movimiento/: CMakeLists.txt
si/: setup.py
si/si/: #1.py  MoveArmClient.py  example.py
(+25 files in other folders)
